Mon Jun  2 14:58:26 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/fe_mcpp.mpb:
        * TAO_IDL/contrib/mcpp/mbchar.cpp:
        * TAO_IDL/fe/mcpp_tao_yyinput.h:

          Fuzz errors. 
        
Mon Jun  2 14:21:40 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:

          Fixes a compile error on QNX.  Thanks to Adam Mitz for providing
          the patch.

        * TAO_IDL/fe/lex.yy.cpp.diff:

          Added this and change from previous commit to be automatically
          applied when lex.yy.cpp is generated; Not sure why these are suddenly
          necessary, may be an anomaly in my version of flex.

Mon Jun  2 14:02:02 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:

          Manually fixed an issue in flex generated code that was causing a
          signed/unsigned mismatch.

Sun Jun  1 23:14:35 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/tao_idl_mcpp.mpb:

          Fully qualified paths to driver source files for non-tao_idl
          projects using this base.

Sun Jun  1 23:11:34 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/fe/mcpp_tao_yyinput.h:

          Fixed signed/unsigned mismatch.

Sun Jun  1 22:58:39 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/internal.H:
        * TAO_IDL/contrib/mcpp/mbchar.cpp:
        * TAO_IDL/contrib/mcpp/system.cpp:
        * TAO_IDL/driver/drv_mcpp_preproc.cpp:

          Fixed warnings exposed on Debian Core build.

Sat May 31 22:06:27 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/tao_idl_mcpp.mpb:

        Moved these base projects to the MPC directory so other front-ends can
        take advantage.

Sat May 31 16:11:30 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
